--- a/views/mentions.html
+++ b/views/mentions.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Digital Consultant Website">
         <meta charset="utf-8"/>
+        <link rel="icon" type="image/png" href="../public/images/logo-png.png"/>
         <!-- rajouter un champ description balise meta -->
         <!-- <link rel="apple-touch-icon" sizes="180x180" href="public/images/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon/favicon-32x32.png">
@@ -22,18 +23,17 @@
         <header>
             <nav class="nav-size">
                 <div class="img-resize">
-                    <a href="#" class="logo" target="_blank">
-                        <img src="../public/images/logo-png.png" alt="icon" class="icon">
-                    </a>
+                    <img src="../public/images/logo-png.png" alt="icon" class="icon" id="icon">
                 </div>
-                <ul>
-                    <li><a href="../index.html">Accueil</a></li>
-                    <li><a href="../index.html#about">À propos</a></li>
-                    <li><a href="../index.html#services">Services</a></li>
-                    <li><a href="../index.html#avis">Avis</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+                <div id="navbar">
+                    <a href="../index.html">Accueil</a>
+                    <a href="../index.html#about">À propos</a>
+                    <a href="../index.html#services">Services</a>
+                    <a href="../index.html#partenaires">Partenaires</a>
+                    <a href="../index.html#avis">Avis</a>
+                    <a href="./blog.html">Blog</a>
+                    <a href="#contact">Contact</a>
+                </div>
             </nav>
         </header>
 
