--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,83 +1,101 @@
-html {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', 'sans-serif';
-    scroll-behavior: smooth;
+.round {
+    border-radius: .25rem!important;
 }
 
-#logo {
-    margin-top: 5vh;
-    height: 10vh;
-    margin-left: 5vw;
-    margin-bottom: 5vh;
+.pad-2 {
+    padding: .5rem!important;
 }
 
-nav {
-    display: flex;
-    flex-wrap: wrap;
-    box-shadow: 0 1px 10px 0 grey;
+.margb-3 {
+    margin-bottom: 1rem!important;
 }
 
-h1{
-    margin-top: 7vh;
+.border-gray {
+    border: 1px solid #dee2e6!important;
 }
-a{
+
+.bord-dark {
+    border-color: #212529!important;
+}
+
+.margb-2 {
+    margin-bottom: .5rem!important;
+}
+
+.bord-bottom {
+    border-bottom: 1px solid #dee2e6!important;
+}
+
+.strong-block {
+    display: block!important;
+}
+
+b, strong {
+    font-weight: bolder;
+}
+
+.italic {
+    font-style: italic!important;
+}
+
+.items-center {
+    align-items: center!important;
+}
+
+.disp-flex {
+    display: flex!important;
+}
+
+.mer-2 {
+    margin-right: .5rem!important;
+}
+
+.form-marg {
+    margin-bottom: .5rem;
+}
+
+label {
+    display: inline-block;
+}
+
+.form-ctrl {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-prm {
+    color: #fff;
+    background-color: #4CAF50;
+    border-color: #4CAF50;
+}
+
+.btn-class {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
     text-align: center;
     text-decoration: none;
-    color: black;
-    margin-right: 4vw;
-}
-
-#navsite {
-    margin-left: 15vw;
-    margin-top: 10vh;
-    
-}
-
-#Nos_Articles{
-    margin-left: 4vw;
-    margin-right: 4vw;
-}
-
-#Les_Avis{
-    margin-left: 4vw;
-    margin-right: 4vw;
-}
-
-h2{
-    margin-bottom: 4vh;
-    margin-top: 5vh;
-}
-
-footer{
-    box-shadow: 0 1px 10px 0 grey;
-    margin-top: 5vh;
-}
-
-#alignement{
-    margin-top: 5vh;
-}
-
-#banniere {
-    margin-top: 5vh;
-    height: 20vh;
-    margin-left: 30vw;
-}
-
-#contact {
-    margin-left: 4vw;
-    margin-right: 4vw;
-}
-
-#description-contact{
-    font-size: 2vh;
-    text-align: center;
-    margin-left: 20vw;
-    margin-right: 20vw;
-    margin-top: 2vh;
-}
-
-#copyright {
-    color: gray;
-    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
